# Generated by Django 5.2.14 on 2026-05-21 12:56

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('bookings', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Payment',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('amount', models.DecimalField(decimal_places=2, max_digits=8)),
                ('status', models.CharField(choices=[('PENDING', 'Pending'), ('SUCCESSFUL', 'Successful'), ('FAILED', 'Failed'), ('REFUND_PENDING', 'Refund Pending'), ('REFUNDED', 'Refunded')], default='PENDING', max_length=20)),
                ('payment_date', models.DateTimeField(blank=True, null=True)),
                ('payment_type', models.CharField(choices=[('INITIAL', 'Initial'), ('ADDITIONAL', 'Additional'), ('REFUND', 'Refund')], default='INITIAL', max_length=20)),
                ('booking', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='payments', to='bookings.booking')),
            ],
        ),
    ]
